Preview: Fix left/right arrows not showing over legend

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ a {
     position: absolute;
     height: 25px;
     display:none;
+    border: none;
+    background: none;
 }
 .hideZone {
     border: 5px solid rgba(255,255,255,0) !important;
